# gemini-synthetic-generator

./: .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  evaluation_proposal.md  model_card.md  pyproject.toml  quick-start.sh
data/: README.md
data/texts/: sample_texts.txt
examples/: python_api_example.py
src/: generator.py  main.py
